# FasterLivePortrait

./: .gitignore  api.py  pyproject.toml  requirements_win.sh
assets/docs/: API.md
static/: app.js  styles.css
templates/: index.html
tests/: test_live_avatar_api.py
